--- a/latex/beamer/quotients.tex
+++ b/latex/beamer/quotients.tex
@@ -113,7 +113,8 @@
 
 %%====================================================================
 
-\title[Normal subgroups!]{Normal subgroups!}
+\title[Quotient groups!]{Quotient groups!}
+\subtitle{(and some review of cosets and normal subgroups)}
 
 \author[\href{mailto:sbagley@westminsteru.edu}{S. Bagley}]
        {\href{mailto:sbagley@westminsteru.edu}{Spencer Bagley}}
@@ -134,7 +135,7 @@
   \begin{enumerate}
     \item Define what \Alert{quotient groups} are
     \item See some examples 
-    \item Thus, see why we care so much about normal subgroupss
+    \item Thus, see why we care so much about normal subgroups
   \end{enumerate}
 \end{frame}
 
